--- a/MyShelfie/pom.xml
+++ b/MyShelfie/pom.xml
@@ -83,7 +83,7 @@
                 <goal>shade</goal>
               </goals>
               <configuration>
-                <finalName>${project.artifactId}-server</finalName>
+                <finalName>ServerApp</finalName>
                 <transformers>
                   <transformer implementation=
                                        "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -113,7 +113,7 @@
                 <goal>shade</goal>
               </goals>
               <configuration>
-                <finalName>${project.artifactId}-client</finalName>
+                <finalName>ClientApp</finalName>
                 <transformers>
                   <transformer implementation=
                                        "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
